--- a/mkt_filters.ipynb
+++ b/mkt_filters.ipynb
@@ -38,8 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [],
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "               close  log_return\ndate                            \n2016-01-01  1.085906         NaN\n2016-01-04  1.085399   -0.000467\n2016-01-05  1.082755   -0.002439\n2016-01-06  1.075199   -0.007003\n2016-01-07  1.077900    0.002508\n...              ...         ...\n2021-12-24  1.132734   -0.000136\n2021-12-27  1.132426   -0.000272\n2021-12-28  1.133003    0.000510\n2021-12-29  1.131478   -0.001347\n2021-12-30  1.136015    0.004002\n\n[1562 rows x 2 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>close</th>\n      <th>log_return</th>\n    </tr>\n    <tr>\n      <th>date</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2016-01-01</th>\n      <td>1.085906</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2016-01-04</th>\n      <td>1.085399</td>\n      <td>-0.000467</td>\n    </tr>\n    <tr>\n      <th>2016-01-05</th>\n      <td>1.082755</td>\n      <td>-0.002439</td>\n    </tr>\n    <tr>\n      <th>2016-01-06</th>\n      <td>1.075199</td>\n      <td>-0.007003</td>\n    </tr>\n    <tr>\n      <th>2016-01-07</th>\n      <td>1.077900</td>\n      <td>0.002508</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2021-12-24</th>\n      <td>1.132734</td>\n      <td>-0.000136</td>\n    </tr>\n    <tr>\n      <th>2021-12-27</th>\n      <td>1.132426</td>\n      <td>-0.000272</td>\n    </tr>\n    <tr>\n      <th>2021-12-28</th>\n      <td>1.133003</td>\n      <td>0.000510</td>\n    </tr>\n    <tr>\n      <th>2021-12-29</th>\n      <td>1.131478</td>\n      <td>-0.001347</td>\n    </tr>\n    <tr>\n      <th>2021-12-30</th>\n      <td>1.136015</td>\n      <td>0.004002</td>\n    </tr>\n  </tbody>\n</table>\n<p>1562 rows × 2 columns</p>\n</div>"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use OpenBB to download the EUR/USD price and get the returns.\n",
     "data = openbb.forex.load(\n",
@@ -63,7 +73,8 @@
     "    prices.close\n",
     "    .apply(np.log)\n",
     "    .diff(1)\n",
-    ")"
+    ")\n",
+    "prices"
    ],
    "metadata": {
     "collapsed": false
@@ -71,8 +82,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [],
+   "execution_count": 9,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "               close  log_return       phase    signal     period\ndate                                                             \n2016-01-01  1.085906         NaN         NaN       NaN        NaN\n2016-01-04  1.085399   -0.000467         NaN       NaN        NaN\n2016-01-05  1.082755   -0.002439         NaN       NaN        NaN\n2016-01-06  1.075199   -0.007003         NaN       NaN        NaN\n2016-01-07  1.077900    0.002508         NaN       NaN        NaN\n...              ...         ...         ...       ...        ...\n2021-12-24  1.132734   -0.000136  263.743424  0.593209  23.210316\n2021-12-27  1.132426   -0.000272  277.779433  0.860838  22.763816\n2021-12-28  1.133003    0.000510    6.952943  0.993321  22.259135\n2021-12-29  1.131478   -0.001347   69.163701  0.740666  21.650351\n2021-12-30  1.136015    0.004002   99.341040 -0.393584  21.044942\n\n[1562 rows x 5 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>close</th>\n      <th>log_return</th>\n      <th>phase</th>\n      <th>signal</th>\n      <th>period</th>\n    </tr>\n    <tr>\n      <th>date</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2016-01-01</th>\n      <td>1.085906</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2016-01-04</th>\n      <td>1.085399</td>\n      <td>-0.000467</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2016-01-05</th>\n      <td>1.082755</td>\n      <td>-0.002439</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2016-01-06</th>\n      <td>1.075199</td>\n      <td>-0.007003</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2016-01-07</th>\n      <td>1.077900</td>\n      <td>0.002508</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2021-12-24</th>\n      <td>1.132734</td>\n      <td>-0.000136</td>\n      <td>263.743424</td>\n      <td>0.593209</td>\n      <td>23.210316</td>\n    </tr>\n    <tr>\n      <th>2021-12-27</th>\n      <td>1.132426</td>\n      <td>-0.000272</td>\n      <td>277.779433</td>\n      <td>0.860838</td>\n      <td>22.763816</td>\n    </tr>\n    <tr>\n      <th>2021-12-28</th>\n      <td>1.133003</td>\n      <td>0.000510</td>\n      <td>6.952943</td>\n      <td>0.993321</td>\n      <td>22.259135</td>\n    </tr>\n    <tr>\n      <th>2021-12-29</th>\n      <td>1.131478</td>\n      <td>-0.001347</td>\n      <td>69.163701</td>\n      <td>0.740666</td>\n      <td>21.650351</td>\n    </tr>\n    <tr>\n      <th>2021-12-30</th>\n      <td>1.136015</td>\n      <td>0.004002</td>\n      <td>99.341040</td>\n      <td>-0.393584</td>\n      <td>21.044942</td>\n    </tr>\n  </tbody>\n</table>\n<p>1562 rows × 5 columns</p>\n</div>"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Build the cycle model and filter\n",
     "# Hilbert Transform - Dominant Cycle Phase\n",
@@ -82,7 +103,9 @@
     "prices[\"signal\"] = np.sin(prices.phase + pi / 4)\n",
     "\n",
     "# Use the Hilbert Transform - Dominant Cycle Period\n",
-    "prices[\"period\"] = talib.HT_DCPERIOD(prices.close)"
+    "prices[\"period\"] = talib.HT_DCPERIOD(prices.close)\n",
+    "\n",
+    "prices"
    ],
    "metadata": {
     "collapsed": false
@@ -121,8 +144,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "               close  log_return       phase    signal     period  filtered  \\\ndate                                                                          \n2016-01-01  1.085906         NaN         NaN       NaN        NaN       NaN   \n2016-01-04  1.085399   -0.000467         NaN       NaN        NaN       NaN   \n2016-01-05  1.082755   -0.002439         NaN       NaN        NaN       NaN   \n2016-01-06  1.075199   -0.007003         NaN       NaN        NaN       NaN   \n2016-01-07  1.077900    0.002508         NaN       NaN        NaN       NaN   \n...              ...         ...         ...       ...        ...       ...   \n2021-12-24  1.132734   -0.000136  263.743424  0.593209  23.210316 -0.001656   \n2021-12-27  1.132426   -0.000272  277.779433  0.860838  22.763816 -0.001041   \n2021-12-28  1.133003    0.000510    6.952943  0.993321  22.259135 -0.000704   \n2021-12-29  1.131478   -0.001347   69.163701  0.740666  21.650351 -0.000391   \n2021-12-30  1.136015    0.004002   99.341040 -0.393584  21.044942 -0.001543   \n\n            amplitude  ema_amplitude  \ndate                                  \n2016-01-01        NaN            NaN  \n2016-01-04        NaN            NaN  \n2016-01-05        NaN            NaN  \n2016-01-06        NaN            NaN  \n2016-01-07        NaN            NaN  \n...               ...            ...  \n2021-12-24   0.005170       0.004520  \n2021-12-27   0.005170       0.004562  \n2021-12-28   0.005170       0.004602  \n2021-12-29   0.004973       0.004626  \n2021-12-30   0.004531       0.004619  \n\n[1562 rows x 8 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>close</th>\n      <th>log_return</th>\n      <th>phase</th>\n      <th>signal</th>\n      <th>period</th>\n      <th>filtered</th>\n      <th>amplitude</th>\n      <th>ema_amplitude</th>\n    </tr>\n    <tr>\n      <th>date</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2016-01-01</th>\n      <td>1.085906</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2016-01-04</th>\n      <td>1.085399</td>\n      <td>-0.000467</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2016-01-05</th>\n      <td>1.082755</td>\n      <td>-0.002439</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2016-01-06</th>\n      <td>1.075199</td>\n      <td>-0.007003</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2016-01-07</th>\n      <td>1.077900</td>\n      <td>0.002508</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2021-12-24</th>\n      <td>1.132734</td>\n      <td>-0.000136</td>\n      <td>263.743424</td>\n      <td>0.593209</td>\n      <td>23.210316</td>\n      <td>-0.001656</td>\n      <td>0.005170</td>\n      <td>0.004520</td>\n    </tr>\n    <tr>\n      <th>2021-12-27</th>\n      <td>1.132426</td>\n      <td>-0.000272</td>\n      <td>277.779433</td>\n      <td>0.860838</td>\n      <td>22.763816</td>\n      <td>-0.001041</td>\n      <td>0.005170</td>\n      <td>0.004562</td>\n    </tr>\n    <tr>\n      <th>2021-12-28</th>\n      <td>1.133003</td>\n      <td>0.000510</td>\n      <td>6.952943</td>\n      <td>0.993321</td>\n      <td>22.259135</td>\n      <td>-0.000704</td>\n      <td>0.005170</td>\n      <td>0.004602</td>\n    </tr>\n    <tr>\n      <th>2021-12-29</th>\n      <td>1.131478</td>\n      <td>-0.001347</td>\n      <td>69.163701</td>\n      <td>0.740666</td>\n      <td>21.650351</td>\n      <td>-0.000391</td>\n      <td>0.004973</td>\n      <td>0.004626</td>\n    </tr>\n    <tr>\n      <th>2021-12-30</th>\n      <td>1.136015</td>\n      <td>0.004002</td>\n      <td>99.341040</td>\n      <td>-0.393584</td>\n      <td>21.044942</td>\n      <td>-0.001543</td>\n      <td>0.004531</td>\n      <td>0.004619</td>\n    </tr>\n  </tbody>\n</table>\n<p>1562 rows × 8 columns</p>\n</div>"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Apply the filter\n",
     "prices[\"filtered\"] = (\n",
@@ -147,7 +180,8 @@
     "        prices.amplitude,\n",
     "        timeperiod=30\n",
     "    )\n",
-    ")"
+    ")\n",
+    "prices"
    ],
    "metadata": {
     "collapsed": false
@@ -155,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
@@ -213,6 +247,27 @@
     "    title=\"position\"\n",
     ")\n",
     "fig.tight_layout()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "               close  log_return       phase    signal     period  filtered  \\\ndate                                                                          \n2016-01-01  1.085906         NaN         NaN       NaN        NaN       NaN   \n2016-01-04  1.085399   -0.000467         NaN       NaN        NaN       NaN   \n2016-01-05  1.082755   -0.002439         NaN       NaN        NaN       NaN   \n2016-01-06  1.075199   -0.007003         NaN       NaN        NaN       NaN   \n2016-01-07  1.077900    0.002508         NaN       NaN        NaN       NaN   \n...              ...         ...         ...       ...        ...       ...   \n2021-12-24  1.132734   -0.000136  263.743424  0.593209  23.210316 -0.001656   \n2021-12-27  1.132426   -0.000272  277.779433  0.860838  22.763816 -0.001041   \n2021-12-28  1.133003    0.000510    6.952943  0.993321  22.259135 -0.000704   \n2021-12-29  1.131478   -0.001347   69.163701  0.740666  21.650351 -0.000391   \n2021-12-30  1.136015    0.004002   99.341040 -0.393584  21.044942 -0.001543   \n\n            amplitude  ema_amplitude  position  \ndate                                            \n2016-01-01        NaN            NaN         0  \n2016-01-04        NaN            NaN         0  \n2016-01-05        NaN            NaN         0  \n2016-01-06        NaN            NaN         0  \n2016-01-07        NaN            NaN         0  \n...               ...            ...       ...  \n2021-12-24   0.005170       0.004520         0  \n2021-12-27   0.005170       0.004562        -1  \n2021-12-28   0.005170       0.004602        -1  \n2021-12-29   0.004973       0.004626         0  \n2021-12-30   0.004531       0.004619         0  \n\n[1562 rows x 9 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>close</th>\n      <th>log_return</th>\n      <th>phase</th>\n      <th>signal</th>\n      <th>period</th>\n      <th>filtered</th>\n      <th>amplitude</th>\n      <th>ema_amplitude</th>\n      <th>position</th>\n    </tr>\n    <tr>\n      <th>date</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2016-01-01</th>\n      <td>1.085906</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2016-01-04</th>\n      <td>1.085399</td>\n      <td>-0.000467</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2016-01-05</th>\n      <td>1.082755</td>\n      <td>-0.002439</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2016-01-06</th>\n      <td>1.075199</td>\n      <td>-0.007003</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2016-01-07</th>\n      <td>1.077900</td>\n      <td>0.002508</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2021-12-24</th>\n      <td>1.132734</td>\n      <td>-0.000136</td>\n      <td>263.743424</td>\n      <td>0.593209</td>\n      <td>23.210316</td>\n      <td>-0.001656</td>\n      <td>0.005170</td>\n      <td>0.004520</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2021-12-27</th>\n      <td>1.132426</td>\n      <td>-0.000272</td>\n      <td>277.779433</td>\n      <td>0.860838</td>\n      <td>22.763816</td>\n      <td>-0.001041</td>\n      <td>0.005170</td>\n      <td>0.004562</td>\n      <td>-1</td>\n    </tr>\n    <tr>\n      <th>2021-12-28</th>\n      <td>1.133003</td>\n      <td>0.000510</td>\n      <td>6.952943</td>\n      <td>0.993321</td>\n      <td>22.259135</td>\n      <td>-0.000704</td>\n      <td>0.005170</td>\n      <td>0.004602</td>\n      <td>-1</td>\n    </tr>\n    <tr>\n      <th>2021-12-29</th>\n      <td>1.131478</td>\n      <td>-0.001347</td>\n      <td>69.163701</td>\n      <td>0.740666</td>\n      <td>21.650351</td>\n      <td>-0.000391</td>\n      <td>0.004973</td>\n      <td>0.004626</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2021-12-30</th>\n      <td>1.136015</td>\n      <td>0.004002</td>\n      <td>99.341040</td>\n      <td>-0.393584</td>\n      <td>21.044942</td>\n      <td>-0.001543</td>\n      <td>0.004531</td>\n      <td>0.004619</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>1562 rows × 9 columns</p>\n</div>"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prices"
    ],
    "metadata": {
     "collapsed": false
