--- a/mkt_filters.ipynb
+++ b/mkt_filters.ipynb
@@ -272,6 +272,35 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0000206870586892\n",
+      "1.032819214441421\n",
+      "0.032292164600148845\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the returns\n",
+    "prices[\"strategy\"] = (\n",
+    "    prices.position\n",
+    "    .shift(1)\n",
+    "    * prices.log_return\n",
+    ")\n",
+    "print(np.exp(prices.strategy.sum()/prices.strategy.count()))\n",
+    "print(np.exp(prices.strategy.sum()))\n",
+    "print(prices.strategy.sum())"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
