add treynor ratio

--- a/geometric_brownian_motion.ipynb
+++ b/geometric_brownian_motion.ipynb
@@ -219,6 +219,26 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[131.        , 131.        , 131.        , ..., 131.        ,\n        131.        , 131.        ],\n       [130.34429307, 131.255074  , 128.8267677 , ..., 131.84851358,\n        128.20821895, 128.35967974],\n       [129.57916356, 132.98997272, 131.42920354, ..., 129.41661616,\n        130.66376306, 131.00761477],\n       ...,\n       [114.91000685, 199.66025544,  88.30282171, ..., 109.86317461,\n         84.50263242, 208.33909808],\n       [113.20226931, 196.50094303,  88.56598245, ..., 110.58826792,\n         86.3329367 , 208.49179147],\n       [111.80617878, 199.25238157,  85.72227916, ..., 111.40178201,\n         86.62546233, 205.6330156 ]])"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "price_paths"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
