--- a/backtester.ipynb
+++ b/backtester.ipynb
@@ -1346,6 +1346,28 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Running this code prints 70 different performance and risk metrics. Here are a few key ones to look at when comparing the trading strategy and the long-only strategy.\n",
+    "\n",
+    "- Cumulative return: 115.1% versus 171.9%\n",
+    "- Sharpe: 0.47 versus 0.43\n",
+    "- Max drawdown: -27.7% versus -34.8%\n",
+    "- Annualized volatility: 9% versus 14.1%\n",
+    "- CVaR: -0.9% versus -1.4%\n",
+    "- Profit factor: 1.12 versus 1.08\n",
+    "\n",
+    "The strategy underperforms the long-only strategy on an absolute basis. But, it has better risk-adjusted returns, lower drawdowns, and lower volatility. It also has a better profit factor—which is important for active strategies.\n",
+    "\n",
+    "Despite underperforming on an absolute basis, it has better risk-adjusted performance.\n",
+    "\n",
+    "By reading today’s newsletter, you can backtest a real trading strategy with Backtrader. Now you can get data, backtest the strategy, and analyze the results to test the performance of your strategies."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
