--- a/backtester.ipynb
+++ b/backtester.ipynb
@@ -164,7 +164,7 @@
     "\n",
     "The strategy closes the long position if the current day is no longer within the last week of the month. The strategy closes the short position if the current day is no longer within the first week of the month.\n",
     "\n",
-    "Now, run the backtest."
+    "Now, we can run the backtest."
    ],
    "metadata": {
     "collapsed": false
