--- a/zipline_nb.ipynb
+++ b/zipline_nb.ipynb
@@ -2,15 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-05-27T15:43:38.608420Z",
-     "start_time": "2023-05-27T15:43:34.668845Z"
+     "end_time": "2023-05-27T15:59:39.221294Z",
+     "start_time": "2023-05-27T15:59:39.215837Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The zipline extension is already loaded. To reload it, use:\n",
+      "  %reload_ext zipline\n"
+     ]
+    }
+   ],
    "source": [
     "# Imports and setup\n",
     "\n",
@@ -27,6 +36,7 @@
     "from zipline.api import order_target, record, symbol\n",
     "from zipline.finance import commission, slippage\n",
     "\n",
+    "\n",
     "import pyfolio as pf\n",
     "\n",
     "import warnings\n",
@@ -38,34 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-05-27T09:44:29-0600-INFO][zipline.data.bundles.core]\r\n",
+      "zsh:1: unknown file attribute: Q\r\n",
+      "[2023-05-27T09:59:44-0600-INFO][zipline.data.bundles.core]\r\n",
       " Ingesting quandl\r\n",
-      "Traceback (most recent call last):\r\n",
-      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/env_tf/bin/zipline\", line 8, in <module>\r\n",
-      "    sys.exit(main())\r\n",
-      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/env_tf/lib/python3.9/site-packages/click/core.py\", line 1130, in __call__\r\n",
-      "    return self.main(*args, **kwargs)\r\n",
-      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/env_tf/lib/python3.9/site-packages/click/core.py\", line 1055, in main\r\n",
-      "    rv = self.invoke(ctx)\r\n",
-      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/env_tf/lib/python3.9/site-packages/click/core.py\", line 1657, in invoke\r\n",
-      "    return _process_result(sub_ctx.command.invoke(sub_ctx))\r\n",
-      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/env_tf/lib/python3.9/site-packages/click/core.py\", line 1404, in invoke\r\n",
-      "    return ctx.invoke(self.callback, **ctx.params)\r\n",
-      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/env_tf/lib/python3.9/site-packages/click/core.py\", line 760, in invoke\r\n",
-      "    return __callback(*args, **kwargs)\r\n",
-      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/env_tf/lib/python3.9/site-packages/zipline/__main__.py\", line 397, in ingest\r\n",
-      "    bundles_module.ingest(\r\n",
-      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/env_tf/lib/python3.9/site-packages/zipline/data/bundles/core.py\", line 445, in ingest\r\n",
-      "    bundle.ingest(\r\n",
-      "  File \"/opt/homebrew/Caskroom/miniforge/base/envs/env_tf/lib/python3.9/site-packages/zipline/data/bundles/quandl.py\", line 180, in quandl_bundle\r\n",
-      "    raise ValueError(\r\n",
-      "ValueError: Please set your QUANDL_API_KEY environment variable and retry.\r\n"
+      "[2023-05-27T09:59:44-0600-INFO][zipline.data.bundles.quandl]\r\n",
+      " Downloading WIKI metadata.\r\n",
+      "\u001B[?25lDownloading WIKI Prices table from Quandl  [------------------------------------]    0%"
      ]
     }
    ],
@@ -75,15 +69,15 @@
     "# Zipline creates data “bundles” for backtesting. You can build custom bundles to ingest any data you want.\n",
     "\n",
     "# Today, you’ll use the pre-built Quandl bundle to ingest price data between 2000 and 2018 for free.\n",
-    "\n",
+    "! set QUANDL_API_KEY=os.getenv('QUANDL_API_KEY')\n",
     "! zipline ingest -b quandl\n",
     "# You will see Zipline working its magic to download the data and package it into highly efficient data stores."
    ],
    "metadata": {
     "collapsed": false,
+    "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2023-05-27T15:44:29.518149Z",
-     "start_time": "2023-05-27T15:44:27.559758Z"
+     "start_time": "2023-05-27T15:59:43.123532Z"
     }
    }
   },
