--- a/zipline_nb.ipynb
+++ b/zipline_nb.ipynb
@@ -59,7 +59,7 @@
       " Ingesting quandl\r\n",
       "[2023-05-27T09:59:44-0600-INFO][zipline.data.bundles.quandl]\r\n",
       " Downloading WIKI metadata.\r\n",
-      "\u001B[?25lDownloading WIKI Prices table from Quandl  [------------------------------------]    0%"
+      "\u001B[?25lDownloading WIKI Prices table from Quandl  [------------------------------------]    0%  05:38:55"
      ]
     }
    ],
