--- a/tech_study.ipynb
+++ b/tech_study.ipynb
@@ -3,7 +3,21 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# TA-Lib technical analysis library to plot Bollinger Bands, RSI, and MACD using Python."
+    "# TA-Lib technical analysis library to plot Bollinger Bands, RSI, and MACD using Python.\n",
+    "\n",
+    "Traders use Bollinger Bands to identify potential trading opportunities in the financial markets.\n",
+    "\n",
+    "They’re usually used for identifying overbought and oversold conditions.\n",
+    "\n",
+    "People also use them for measuring volatility and getting ahead of trend reversals.\n",
+    "\n",
+    "Traders use the Relative Strength Index (RSI) to identify overbought or oversold conditions.\n",
+    "\n",
+    "RSI oscillates between 0 and 100. Values above 70 show overbought conditions and values below 30 show oversold conditions.\n",
+    "\n",
+    "The Moving Average Convergence Divergence (MACD) is a popular technical analysis tool, too. It’s used by traders to identify trend reversals, momentum shifts, and trend strength.\n",
+    "\n",
+    "MACD is based on the difference between two exponential moving averages with different periods."
    ],
    "metadata": {
     "collapsed": false
